tests/errors/malformed-interval.fil
comp Main<G: 1>(@[G, 3] go: 1) -> () {}
