tests/errors/malformed-interval.expect
---CODE---
1
---STDERR---
Error: error while parsing:  --> 1:22
  |
1 | comp Main<G: 1>(@[G, 3] go: 1) -> () {}
  |                      ^
  |
  = time expressions must have the form `E+n' where `E' is an event and `n' is a concrete number or sum of parameters: 
Compilation failed with 1 errors.
